src/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Hind&display=swap");

* {
  --light: #f4dbb6;
  --light-orange: #ff9800;
  --orange: #ef6c00;
  --dark-orange: #e65100;
  --error: #e61b00;

  font-family: "Open Sans", sans-serif;
}

::selection,
::-moz-selection {
  background-color: var(--dark-orange);
}

html,
body {
  height: 100%;
}

.container {
  height: 100%;
  display: flex;
  flex-flow: column;
}

body {
  margin: 0;
  padding: 0;
  background-color: #e3e3e3;
}

.hidden {
  visibility: hidden;
  opacity: 0;
}

/* Header */
/* -     -     -     -     -     -     -     -     -     -     -     -     -     -     -      */

header {
  padding: 50px 0;
  background-color: var(--light-orange);
}

#title {
  font-weight: lighter;
  text-align: center;
  margin-top: 0;
  margin-bottom: 55px;
  color: white;
}

form {
  text-align: center;
}

#input-container {
  display: flex;
  justify-content: center;
}

#location-container,
#search-icon-container {
  position: relative;
  width: 30px;
  height: 30px;
  line-height: 30px;
  background-color: var(--orange);
  color: white;
  flex-shrink: 0;
}

#location-container {
  margin-right: -10px;
  border-radius: 9px 0 0 9px;
}

#search-icon-container {
  margin-left: -10px;
  border-radius: 0px 9px 9px 0px;
  font-size: 20px;
  padding: 0;
  border: none;
  transition: 0.2s;
}

#search-icon-container:active {
  background-color: var(--dark-orange);
}

#location-icon {
  width: 23px;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
}

#location-input {
  width: 60vw;
  height: 30px;
  border-radius: 0 9px 9px 0;
  border: 5px solid var(--lightorange);
  background: transparent;
  box-shadow: inset 0 0 10px var(--orange);
  padding: 0px 20px;
  color: white;
  text-shadow: 1px 1px 1px #79480078;
  font-size: 16px;
  transition: 0.3s ease;
  text-transform: uppercase;
  flex-shrink: 0;
}

#location-input:focus {
  outline: none;
  box-shadow: inset 0 0 50px var(--orange);
}

::placeholder {
  text-transform: none;
}

#error {
  color: var(--dark-orange);
  padding: 0;
  display: table;
  margin: 0 auto;
  margin-top: 20px;
  text-align: center;
  transition: 0.2s;
  font-family: "Hind", sans-serif;
  font-size: 16px;
}

.shake {
  animation: shake 0.2s ease;
}

@keyframes shake {
  0% {
    transform: translateX(1px);
  }
  33% {
    transform: translateX(1.5px);
  }
  33% {
    transform: translateX(-1.5px);
  }
  100% {
    transform: translateX(1px);
  }
}

/* Results */
/* -     -     -     -     -     -     -     -     -     -     -     -     -     -     -      */

.results {
  flex: 1;
  display: flex;
  transition: 0.5s;
  position: relative;
}

/* The switch - the box around the slider */
.switch {
  position: absolute;
  display: inline-block;
  width: 60px;
  height: 34px;
  right: 20px;
  top: 20px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  display: flex;
  justify-content: center;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--light-orange);
  box-shadow: inset 0 0 10px var(--orange);
  -webkit-transition: .4s;
  transition: .4s;
  border-radius: 25px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
  border-radius: 50%;
}

/* input:checked + .slider::before {
  border-radius: 50%;
} */

input:focus + .slider {
  box-shadow: inset 0 0 10px var(--orange), 0 0 1px black;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

.tempUnits {
  display: flex;
  position: absolute;
  justify-content: space-around;
  width: 90%;
  top: 50%;
  transform: translateY(-50%);
  height: 100%;
  align-items: center;
}

.tempUnits span {
  color: var(--orange);
  font-family: 'Roboto';
  transition: 0.5s;
  user-select: none;
}
.tempUnits span:nth-child(2) {
  color: white;
}

input:checked + .slider span:nth-child(2) {
  color: var(--orange);
}

input:checked + .slider span:first-child {
  color: white !important;
}

#empty {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100%;
  transition: 0.5s;
}

#help-text {
  font-size: 25px;
  text-align: center;
  opacity: 0.2;
}
#help-text span {
  color: black;
}

#smiling-sun {
  position: relative;
  width: 114px;
  height: 114px;
  opacity: 0.1;
  margin-top: 30px;
  margin-bottom: 30px;
  top: 0;
}

#smiling-sun img {
  position: absolute;
  width: inherit;
  transition: 0.5s;
}

#smiling-sun-rays {
  animation: spin 7s linear;
  animation-iteration-count: infinite;
}

.fadeOut {
  transition: 0.5s ease;
  opacity: 0;
  transform: scale(0.9);
}


@keyframes spin {
  100% {
    transform: rotate(359deg);
  }
}

/* Footer */
/* -     -     -     -     -     -     -     -     -     -     -     -     -     -     -      */

#powered-by {
  position: absolute;
  bottom: 0;
  left: 0;
  font-family: "Roboto", sans-serif;
  color: black;
  opacity: 0.3;
  padding: 5px;
  font-size: 14px;
}

#powered-by a {
  color: black;
}

